# health-check-processor

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ALGORITHM.md  ARCHITECTURE.md  DECISIONS.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: equivalent.sql
src/uptime/: __main__.py  cli.py  intervals.py  io.py  metrics.py  models.py
tests/: conftest.py  test_cli.py  test_intervals.py  test_io.py  test_metrics.py  test_properties.py
tests/data/: sample_pdf.csv  sample_pdf_expected.csv
